--- a/Nucleo Serial Interrupts/Objects/Nucleo LED Flash.build_log.htm
+++ b/Nucleo Serial Interrupts/Objects/Nucleo LED Flash.build_log.htm
@@ -21,25 +21,13 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\Sdurette2688\Desktop\repos\Engineering-Project5\Nucleo Serial Interrupts\Nucleo LED Flash.uvprojx
-Project File Date:  11/27/2020
+\\FSSTU04D\STU12\Home\Nthomas3094\Fall2020\Projects\Nucleo Serial Interrupts\Nucleo LED Flash.uvprojx
+Project File Date:  11/01/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling SysClock.c...
-compiling UARTstreamRemap.c...
-compiling LED.c...
-compiling UART.c...
-UART.c(172): warning:  #167-D: argument of type "volatile uint32_t *" is incompatible with parameter of type "uint32_t *"
-  	receive(
-SART2, USART2_Buffer_Rx, &pRx_Counter);
-UART.c: 1 warning, 0 errors
-compiling main.c...
-linking...
-Program Size: Code=2172 RO-data=460 RW-data=16 ZI-data=1664  
-FromELF: creating hex file...
-".\Objects\Nucleo LED Flash.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\Nucleo LED Flash.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -62,7 +50,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
